--- a/fronted/package.json
+++ b/fronted/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^12.2.0",
     "lucide-react": "^0.542.0",
     "react": "^18.3.1",
